Fix alignment in SkuSelector

--- a/src/styles/components/product/SkuSelector.less
+++ b/src/styles/components/product/SkuSelector.less
@@ -104,4 +104,5 @@
   text-align: center;
   margin-top: 1.2em;
   margin-bottom: 0.5em;
+  padding: 0px;
 }
